<resources>
    <string name="app_name">Typo</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send_message">Send Message</string>
    <string name="typo">Typo</string>
    <string name="save">Save</string>
    <string name="enter_the_ip_address">Enter the IP Address</string>
    <string name="enter">Enter</string>
    <string name="connect_nearby">Connect Nearby</string>
    <string name="check_internet">Please Check Your Internet!</string>
    <string name="no_wifi_icon">No Wifi Icon</string>
    <string name="backspace">Backspace</string>
    <string name="refresh">Refresh</string>
    <string name="cmd">CMD</string>
    <string name="screenshot">Screenshot</string>
</resources>