<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/niLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginHorizontal="25dp"
    android:paddingVertical="50dp"
    android:background="@drawable/rounded_corner"
    >

    <ImageView
        android:id="@+id/niIcon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/no_wifi_icon"
        android:src="@drawable/no_wifi" />

    <TextView
        android:id="@+id/niLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/check_internet"
        android:textColor="@color/ni_label"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:textColor="#fff"
        android:backgroundTint="#006064"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:textSize="18sp"
        />

</LinearLayout>